{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 163,
  "lineage": "a11b21d9-3f63-5b7b-be03-98439bedeb9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Dev_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0985b5a5ed84b9c36",
            "arn": "arn:aws:ec2:us-east-1:430407726317:instance/i-09a0a277fad5d4312",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a0a277fad5d4312",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c1f4fd1e9ec517da",
            "private_dns": "ip-10-0-1-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_ip": "34.207.140.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b05bb2703866084",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5ac3a8bd2223e9f",
            "tags": {
              "Name": "Web-Sever-1"
            },
            "tags_all": {
              "Name": "Web-Sever-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e76bd7e1d9d01d3"
            ]
          },
          "dependencies": [
            "aws_security_group.Dev_Deployment_sg",
            "aws_subnet.Dev-Deployment_Subnet",
            "aws_vpc.Dev-Deployment",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0985b5a5ed84b9c36",
            "arn": "arn:aws:ec2:us-east-1:430407726317:instance/i-035f9743a72e8d42e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035f9743a72e8d42e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb6611363d4f0fe8",
            "private_dns": "ip-10-0-1-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_ip": "18.212.145.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02fc6bf9681542c50",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5ac3a8bd2223e9f",
            "tags": {
              "Name": "Web-Sever-2"
            },
            "tags_all": {
              "Name": "Web-Sever-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e76bd7e1d9d01d3"
            ]
          },
          "dependencies": [
            "aws_security_group.Dev_Deployment_sg",
            "aws_subnet.Dev-Deployment_Subnet",
            "aws_vpc.Dev-Deployment",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0985b5a5ed84b9c36",
            "arn": "arn:aws:ec2:us-east-1:430407726317:instance/i-0d9268118a6fccb86",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9268118a6fccb86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Devkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c47b316cc4e8c67",
            "private_dns": "ip-10-0-1-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.119",
            "public_ip": "184.73.69.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab0c209883855825",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5ac3a8bd2223e9f",
            "tags": {
              "Name": "Web-Sever-3"
            },
            "tags_all": {
              "Name": "Web-Sever-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e76bd7e1d9d01d3"
            ]
          },
          "dependencies": [
            "aws_security_group.Dev_Deployment_sg",
            "aws_subnet.Dev-Deployment_Subnet",
            "aws_vpc.Dev-Deployment",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Dev-Deployment_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430407726317:internet-gateway/igw-0dad996d36f93e499",
            "id": "igw-0dad996d36f93e499",
            "owner_id": "430407726317",
            "tags": {
              "Name": "Dev-Deployment_igw"
            },
            "tags_all": {
              "Name": "Dev-Deployment_igw"
            },
            "vpc_id": "vpc-0a093769b0538f4b5"
          },
          "dependencies": [
            "aws_vpc.Dev-Deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Dev_Deployment_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dad996d36f93e499",
            "id": "r-rtb-066187b795b41abe92603338536",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066187b795b41abe9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Dev-Deployment_igw",
            "aws_route_table.Dev_Deployment_rt",
            "aws_vpc.Dev-Deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Dev_Deployment_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430407726317:route-table/rtb-066187b795b41abe9",
            "id": "rtb-066187b795b41abe9",
            "owner_id": "430407726317",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Dev_Deployment_rt"
            },
            "tags_all": {
              "Name": "Dev_Deployment_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a093769b0538f4b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Dev-Deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ba932b406f02dde",
            "route_table_id": "rtb-066187b795b41abe9",
            "subnet_id": "subnet-0d5ac3a8bd2223e9f"
          },
          "dependencies": [
            "aws_route_table.Dev_Deployment_rt",
            "aws_subnet.Dev-Deployment_Subnet",
            "aws_vpc.Dev-Deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Dev_Deployment_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430407726317:security-group/sg-04e76bd7e1d9d01d3",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e76bd7e1d9d01d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Dev_Deployment_sg",
            "name_prefix": "",
            "owner_id": "430407726317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev_Deployment_sg"
            },
            "tags_all": {
              "Name": "Dev_Deployment_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a093769b0538f4b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Dev-Deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Dev-Deployment_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430407726317:subnet/subnet-0d5ac3a8bd2223e9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5ac3a8bd2223e9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430407726317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Deployment_Subnet"
            },
            "tags_all": {
              "Name": "Dev-Deployment_Subnet"
            },
            "vpc_id": "vpc-0a093769b0538f4b5"
          },
          "dependencies": [
            "aws_vpc.Dev-Deployment"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Dev-Deployment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430407726317:vpc/vpc-0a093769b0538f4b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07aa1510fc13b4a58",
            "default_route_table_id": "rtb-0c5fb9fb33a4e9e4e",
            "default_security_group_id": "sg-0b4e2c8db077dcb9b",
            "dhcp_options_id": "dopt-084329146a22a02cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a093769b0538f4b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5fb9fb33a4e9e4e",
            "owner_id": "430407726317",
            "tags": {
              "Name": "Dev-Deployment"
            },
            "tags_all": {
              "Name": "Dev-Deployment"
            }
          }
        }
      ]
    }
  ]
}